<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    >

    <include layout="@layout/include_title_bar" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dip" >

        <ImageView
            android:id="@+id/usr_img_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:scaleType="center"
            android:src="@drawable/man_1" />

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dip"
            android:layout_weight="1.8"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/xingming1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_login"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="@string/sex_str"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/xingbie1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="@string/chest_number_str"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/jdrybh1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="@string/dept_str"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dept1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/login_u_1"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/p_renzheng" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/usr_img_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:scaleType="center"
            android:src="@drawable/man_1" />

        <LinearLayout
            android:id="@+id/info2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dip"
            android:layout_weight="1.8"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/xingming2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_login"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="@string/sex_str"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/xingbie2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="@string/chest_number_str"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/jdrybh2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:text="@string/dept_str"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dept2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:textColor="#BEBEBE"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/login_u_2"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/p_renzheng" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="@color/gray" />

</LinearLayout>